fixed some overflows

--- a/css/style.css
+++ b/css/style.css
@@ -139,6 +139,7 @@ body {
   width: 90%;
   display: flex;
   flex-direction: column;
+  overflow-y: auto;
 }
 .new_message_area {
   width: 100%;
@@ -149,6 +150,7 @@ body {
   justify-content: space-between;
   align-items: center;
   background-color: #f3eeea;
+  overflow: hidden;
 }
 .new_message_area i {
   margin: 0 30px;
